--- a/mlsc/templates/events.html
+++ b/mlsc/templates/events.html
@@ -73,7 +73,9 @@
         <div class="services-container">
             <div class="services-box">
                 <div class="content">
-                    <i class='bx bxs-cloud'></i>
+                    <i class='bx bxl-javascript'></i>
+                    <i class='bx bxl-html5'></i>
+                    <i class='bx bxl-css3' ></i>
                     <h3>Web development BootCamp</h3>
                     <p>We are going organize an engaging Web Development workshop, providing 
                         students with hands-on experience in Basic Web technologies. 
@@ -86,7 +88,7 @@
                         </div>
                 </div>
                 <div class="image-container">
-                    <img src="{%static 'images/events/azure-event.jpg' %}" alt="Azure Workshop Image">
+                    <img src="{%static 'images/events/cover-img-2.jpg' %}" alt="Azure Workshop Image">
                 </div>
             </div>
         </div>
