--- a/mlsc/templates/index.html
+++ b/mlsc/templates/index.html
@@ -444,7 +444,7 @@ color:black;
     <!-- footer design -->
     <footer class="footer">
         <div class="footer-text">
-            <p>Copyright &copy; 2023 | Designed by (22A81A05Q0_CSE) </p>
+            <p>Copyright &copy; 2023</p>
         </div>
 
         <div class="footer-iconTop">
