--- a/mlsc/templates/teams.html
+++ b/mlsc/templates/teams.html
@@ -301,7 +301,7 @@
         <div class="row">
           <div class="profile">
             <div class="circle">
-                <img src="{%static 'images/teams/manaswi-em.jpg' %}" alt="Developer 1">
+                <img src="{%static 'images/teams/manaswi.jpg' %}" alt="Developer 1">
             </div>
             <p class="developer-name">G. Manaswi</p>
             <p class="role">Head</p>
@@ -361,7 +361,7 @@
             <div class="circle">
               <img src="{%static 'images/teams/fardeen-pr.jpg' %}" alt="Developer 2">
             </div>
-            <p class="developer-name">K. Fardeen Md.</p>
+            <p class="developer-name">Md.Karamath Fardeen</p>
             <p class="role">Associate</p>
             <p class="linkedin-handle"><a href="https://www.linkedin.com/in/mohammad-karamath-fardeen-1b3644255/"target="_blank">LinkedIn</a></p>
           </div>
