--- a/mlsc/templates/email.html
+++ b/mlsc/templates/email.html
@@ -9,7 +9,7 @@
     <style>
         body {
             font-family: 'Arial', sans-serif;
-            background-color: #000451; /* Deep Blue */
+            background-color: #000dff; /* Deep Blue */
             color: #fff; /* White text */
             margin: 0;
             padding: 0;
@@ -19,10 +19,10 @@
             margin: 20px auto;
             border-radius: 10px;
             overflow: hidden;
-            box-shadow: 0 0 20px rgba(255, 0, 0, 0.1);
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
         }
         header {
-            background-color: #1629c0; /* Dark Blue */
+            background-color: #000b5c; /* Dark Blue */
             text-align: center;
             padding: 20px;
         }
@@ -93,9 +93,9 @@
             <p>We look forward to seeing you at the workshop!</p>
 
             <div class="social-icons">
-                <a href="https://www.instagram.com/" target="_blank"><img src="/mlsc/static/images/blogs/insta.png" alt="Instagram"></a>
-                <a href="https://wa.me/" target="_blank"><img src="/mlsc/static/images/blogs/wp.png" alt="WhatsApp"></a>
-                <a href="https://www.linkedin.com/" target="_blank"><img src="/mlsc/static/images/blogs/li.png" alt="LinkedIn"></a>
+                <a href="https://www.instagram.com/mlsc.svec?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank"><img src="/mlsc/static/images/blogs/insta.png" ></a>
+                <a href="https://whatsapp.com/channel/0029VaJiNv72ER6emJMEl41u" target="_blank"><img src="/mlsc/static/images/blogs/wp.png" ></a>
+                <a href="https://www.instagram.com/mlsc.svec?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank"><img src="/mlsc/static/images/blogs/li.png" ></a>
             </div>
         </main>
         <footer>
