--- a/mlsc/templates/email.html
+++ b/mlsc/templates/email.html
@@ -19,23 +19,18 @@
             margin: 20px auto;
             border-radius: 10px;
             overflow: hidden;
-            box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 0 20px rgba(255, 255, 255, 0.1);
         }
         header {
             background-color: #000b5c; /* Dark Blue */
             text-align: center;
             padding: 20px;
         }
-        header img {
-            max-width: 100%;
-            height: auto;
-            display: block;
-            margin: 0 auto;
-        }
+
         main {
             padding: 20px;
-            background-color: #000000; /* Deep Blue */
-            color: #fff; /* White text */
+            background-color: #ffffff; /* Deep Blue */
+            color: #000000; /* White text */
         }
         ul {
             list-style: none;
@@ -45,27 +40,18 @@
             margin-bottom: 10px;
         }
         footer {
-            background-color: #000000; /* Dark Blue */
+            background-color: #000b5c; /* Dark Blue */
             padding: 10px;
             text-align: center;
         }
         footer p {
             margin: 0;
         }
-        .social-icons {
-            margin-top: 20px;
-            text-align: center;
-        }
-        .social-icons img {
-            max-width: 30px; /* Adjust the size as needed */
-            margin-right: 10px; /* Adjust the spacing between logos */
-        }
     </style>
 </head>
 <body>
     <div class="container">
         <header>
-            <img src="/mlsc/static/images/home/FRONT LOGO.png" alt="Logo" style="max-width: 200px;">
             <h1 style="margin-top: 10px; color: #fff;">MLSC Workshop Invitation</h1>
         </header>
         <main>
@@ -91,12 +77,6 @@
             <p>If you have any questions or need further information, feel free to contact us at coordinator.</p>
 
             <p>We look forward to seeing you at the workshop!</p>
-
-            <div class="social-icons">
-                <a href="https://www.instagram.com/mlsc.svec?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank"><img src="/mlsc/static/images/blogs/insta.png" ></a>
-                <a href="https://whatsapp.com/channel/0029VaJiNv72ER6emJMEl41u" target="_blank"><img src="/mlsc/static/images/blogs/wp.png" ></a>
-                <a href="https://www.instagram.com/mlsc.svec?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank"><img src="/mlsc/static/images/blogs/li.png" ></a>
-            </div>
         </main>
         <footer>
             <p>Best regards,<br>MLSC Team<br>MLSC SVEC</p>
