--- a/mlsc/templates/email.html
+++ b/mlsc/templates/email.html
@@ -63,7 +63,7 @@
             <ul>
                 <li><strong>Date:</strong> March 14, 2024</li>
                 <li><strong>Time:</strong> 10:00 AM IST</li>
-                <li><strong>Location:</strong> Swami Vivekananda Seminar Hall</li>
+                <li><strong>Location:</strong> APJ Abdul Kalam Seminar Hall BSH</li>
                 <li><strong>Agenda:</strong> To gain knowledge of the latest trends in web development</li>
             </ul>
 
